# WeightScope

./: .gitignore  METRICS_AND_PLOTS.md  README.md  STRUCTURE.md  WHAT_CAN_IT_FIND.md  gpt2_analysis_detailed.json  pyproject.toml
docs/: ADVANCED_FEATURES.md  WeightScope_Paper_Draft.md  comprehensive_analysis.json
examples/: analyze_gpt2.py  compare_models.py  comprehensive_demo.py  parallel_demo.py  real_world_cases.py  visualization_demo.py
tests/: test_analyzers.py  test_parallel.py
visualization_outputs/: analysis_report.html
weightscope/: __init__.py  cli.py
weightscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
weightscope/analyzers/: basic.py  quantization.py  sparsity.py  spectral.py
weightscope/core/: comparator.py  loader.py  parallel.py  walker.py
weightscope/visualizers/: __init__.py  plot.py  terminal.py
