[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weightscope"
version = "0.1.0"
description = "A Python toolkit for analyzing LLM weights to find potential defects."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "safetensors",
    "numpy",
    "scipy",
    "rich",
    "matplotlib",
    "pandas",
    "modelscope"
]

[project.scripts]
weightscope = "weightscope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["weightscope*"]
